inject fastcgi param

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -66,8 +66,9 @@ http {
 			include fastcgi.conf;
 			fastcgi_split_path_info ^(.+\.php)(.*)$;
 			fastcgi_param PATH_INFO $fastcgi_path_info;
-			fastcgi_param HTTP_HOST '{{SERVER_NAME}}';
-			fastcgi_param SERVER_NAME '{{SERVER_NAME}}';
+			fastcgi_param HTTP_HOST '{{CGI_PARAM_SERVER_NAME}}';
+			fastcgi_param SERVER_NAME '{{CGI_PARAM_SERVER_NAME}}';
+			fastcgi_param HTTPS '{{CGI_PARAM_HTTPS}}';
 		}
 
 		location ~ ^/status$ {
